2004-07-25  Daniel Jacobowitz  <dan@debian.org>

	* doc/as.texinfo (Section, PushSection): Correct documentation
	for ELF.

2004-07-21  Jan Beulich  <jbeulich@novell.com>

	* config/tc-i386.c (optimize_imm): Adjust immediates to only those
	permissible for the selected instruction suffix.
	(match_template): Don't permit 64-bit general purpose operands in
	32-bit mode.
	(finalize_imm): Permit 64-bit immediates.
	(build_modrm_byte): Don't treat 32-bit addressing in 64-bit mode
	specially except for the width of the used base and/or index
	registers.  For 32-bit displacements, use sign-extended
	relocations only when using 64-bit addressing.
	Force zero displacement on rip-relative addressing when there is
	no other displacement.
	(i386_index_check): Don't treat 32-bit addressing in 64-bit mode
	specially except for the width of the used base and/or index
	registers.
	(parse_register): Disallow Reg64 registers in 32-bit mode.

	* config/tc-i386.c: For DefaultSize instructions, don't guess a 'q'
	suffix if the instruction doesn't support it.
	
2004-07-20  Maciej W. Rozycki  <macro@linux-mips.org>

	* config/tc-mips.c (append_insn): Handle constant expressions with
	no associated relocation.
	(mips_ip): Cancel the expression after use for the Q format
	specifier.
	(parse_relocation): Return no relocation for unsupported
	operators.
	(my_getSmallExpression): Return no relocation if no relocation
	operators are used.

2004-07-19  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config/obj-som.c (adjust_stab_sections): Add prototype.
	(obj_som_compiler, obj_som_version, obj_som_copyright,
	adjust_stab_sections): Add ATTRIBUTE_UNUSED to unused arguments.
	* config/tc-hppa.c (update_subspace):  Likewise.
	(is_defined_subspace): Amplify comment.
	* config/obj-som.h (som_frob_file): Add prototype.

2004-07-19  Christopher Faylor  <cgf@timesys.com>
	    H.J. Lu  <hongjiu.lu@intel.com>

	* subsegs.c (section_symbol): Don't create a new segment when