@@ -286,7 +286,7 @@ EMBEDDED=yes
 TEMPLATE_NAME=generic
 
 ROM_START=0x4000
-ROM_SIZE=0xbef0
+ROM_SIZE=0xbfe0
 RAM_START=0x0200
 RAM_SIZE=0x07ff
 
@@ -388,7 +388,7 @@ EMBEDDED=yes
 TEMPLATE_NAME=generic
 
 ROM_START=0x4000
-ROM_SIZE=0xbef0
+ROM_SIZE=0xbfe0
 RAM_START=0x0200
 RAM_SIZE=0x07ff
 
@@ -410,6 +410,57 @@ RAM_START=0x0200
 RAM_SIZE=0x07ff
 
 STACK=0xa00
+fi
+
+if [ "${MSP430_NAME}" = "msp430x1610" ] ; then
+ARCH=msp:16
+MACHINE=
+SCRIPT_NAME=elf32msp430
+OUTPUT_FORMAT="elf32-msp430"
+MAXPAGESIZE=1
+EMBEDDED=yes
+TEMPLATE_NAME=generic
+
+ROM_START=0x8000
+ROM_SIZE=0x7fe0
+RAM_START=0x1100
+RAM_SIZE=0x13ff
+
+STACK=0x1400
+fi
+
+if [ "${MSP430_NAME}" = "msp430x1611" ] ; then
+ARCH=msp:16
+MACHINE=
+SCRIPT_NAME=elf32msp430
+OUTPUT_FORMAT="elf32-msp430"
+MAXPAGESIZE=1
+EMBEDDED=yes
+TEMPLATE_NAME=generic
+
+ROM_START=0x4000
+ROM_SIZE=0xbfe0
+RAM_START=0x1100
+RAM_SIZE=0x27ff
+
+STACK=0x2800
+fi
+
+if [ "${MSP430_NAME}" = "msp430x1612" ] ; then
+ARCH=msp:16
+MACHINE=
+SCRIPT_NAME=elf32msp430
+OUTPUT_FORMAT="elf32-msp430"
+MAXPAGESIZE=1
+EMBEDDED=yes
+TEMPLATE_NAME=generic
+
+ROM_START=0x2800
+ROM_SIZE=0xd7e0
+RAM_START=0x1100
+RAM_SIZE=0x13ff
+
+STACK=0x1400
 fi
 
 if [ "${MSP430_NAME}" = "msp430x311" ] ; then
@@ -599,6 +650,40 @@ RAM_SIZE=256
 STACK=0x300
 fi
 
+if [ "${MSP430_NAME}" = "msp430x415" ] ; then
+ARCH=msp:41
+MACHINE=
+SCRIPT_NAME=elf32msp430
+OUTPUT_FORMAT="elf32-msp430"
+MAXPAGESIZE=1
+EMBEDDED=yes
+TEMPLATE_NAME=generic
+
+ROM_START=0xc000
+ROM_SIZE=0x3fe0
+RAM_START=0x0200
+RAM_SIZE=512
+
+STACK=0x400
+fi
+
+if [ "${MSP430_NAME}" = "msp430x417" ] ; then
+ARCH=msp:41
+MACHINE=
+SCRIPT_NAME=elf32msp430
+OUTPUT_FORMAT="elf32-msp430"
+MAXPAGESIZE=1
+EMBEDDED=yes
+TEMPLATE_NAME=generic
+
+ROM_START=0x8000
+ROM_SIZE=0x7fe0
+RAM_START=0x0200
+RAM_SIZE=1024
+
+STACK=0x600
+fi
+
 if [ "${MSP430_NAME}" = "msp430x435" ] ; then
 ARCH=msp:43
 MACHINE=
@@ -662,7 +747,7 @@ TEMPLATE_NAME=generic
 ROM_START=0x8000
 ROM_SIZE=0x7fe0
 RAM_START=0x0200
-RAM_SIZE=1K
+RAM_SIZE=1024
 
 STACK=0x600
 fi
@@ -677,7 +762,7 @@ EMBEDDED=yes
 TEMPLATE_NAME=generic
 
 ROM_START=0x4000
-ROM_SIZE=0xbef0
+ROM_SIZE=0xbfe0
 RAM_START=0x0200
 RAM_SIZE=0x07ff
 
@@ -747,9 +832,60 @@ TEMPLATE_NAME=generic
 ROM_START=0x8000
 ROM_SIZE=0x7fe0
 RAM_START=0x0200
-RAM_SIZE=1K
+RAM_SIZE=1024
 
 STACK=0x600
+fi
+
+if [ "${MSP430_NAME}" = "msp430xG437" ] ; then
+ARCH=msp:43
+MACHINE=
+SCRIPT_NAME=elf32msp430
+OUTPUT_FORMAT="elf32-msp430"
+MAXPAGESIZE=1
+EMBEDDED=yes
+TEMPLATE_NAME=generic
+
+ROM_START=0x8000
+ROM_SIZE=0x7fe0
+RAM_START=0x0200
+RAM_SIZE=1024
+
+STACK=0x600
+fi
+
+if [ "${MSP430_NAME}" = "msp430xG438" ] ; then
+ARCH=msp:43
+MACHINE=
+SCRIPT_NAME=elf32msp430
+OUTPUT_FORMAT="elf32-msp430"
+MAXPAGESIZE=1
+EMBEDDED=yes
+TEMPLATE_NAME=generic
+
+ROM_START=0x4000
+ROM_SIZE=0xbef0
+RAM_START=0x0200
+RAM_SIZE=0x07ff
+
+STACK=0xa00
+fi
+
+if [ "${MSP430_NAME}" = "msp430xG439" ] ; then
+ARCH=msp:43
+MACHINE=
+SCRIPT_NAME=elf32msp430
+OUTPUT_FORMAT="elf32-msp430"
+MAXPAGESIZE=1
+EMBEDDED=yes
+TEMPLATE_NAME=generic
+
+ROM_START=0x1100
+ROM_SIZE=0xeee0
+RAM_START=0x0200
+RAM_SIZE=0x07ff
+
+STACK=0xa00
 fi
 
 if [ "${MSP430_NAME}" = "msp430xW423" ] ; then
